# parallel-bench

./: README.md  orchestrator.py
results/large/: bench.csv
results/small/: bench.csv
src/: build.py  build_wgpu.py  orchestrator.py
src/omp/: CMakeLists.txt  main.cpp
src/runners/: omp_runner.py  wgpu_runner.py
src/wgpu/: CMakeLists.txt
src/wgpu/src/: main.cpp
src/wgpu/src/mult/: mult.cpp  mult.h
src/wgpu/src/shaders/: complex_shader.wgsl  shader.cpp  shader.h  simple_shader.wgsl
wgpu/: run.sh
wgpu/src/: main.cpp
wgpu/src/mult/: mult.cpp  mult.wgsl
